Code: adjusting login back color, ball acceleration and fixed 42 image not showing up on end games.

--- a/backend/static/css/signup.css
+++ b/backend/static/css/signup.css
@@ -3,7 +3,7 @@ body {
 	font-size: small;
     margin: 0;
     padding: 0;
-    background: #061e2f url('../assets/images/42logo.png') no-repeat center center fixed;
+    background: #051725 url('../assets/images/42logo.png') no-repeat center center fixed;
     background-size: cover;
     display: flex;
     justify-content: center;
